--- a/style.css
+++ b/style.css
@@ -50,4 +50,12 @@ button {
     border-bottom-right-radius: 4px;
 }
 
-    
+.random__btn {
+    cursor: pointer;
+    margin-left: 10px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+
+
