--- a/style.css
+++ b/style.css
@@ -1,35 +1,54 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
 }
 
 body {
-    height: 100vh;
+    height: 300vh;
     background: #16222A;
     background: -webkit-linear-gradient(to bottom, #3A6073, #16222A);
     background: linear-gradient(to bottom, #3A6073, #16222A);
     background-repeat: no-repeat;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow-x: hidden;
+    color: white;
 }
 
 .container {
+    margin: 0 auto;
     display: flex;
     max-width: 800px;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin: auto;
+
 }
 
 .flex {
     display: flex;
 }
 
-h1 {
+ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+li {
+    list-style-type: none;
+    padding: .4rem;
+    background-color: whitesmoke;
+    color: black;
+    margin: .3rem;
+    padding: .4rem 2rem;
+    border-radius: 5px;
+    font-weight: bolder;
+}
+
+h1,
+h4 {
     color: white;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 input,
@@ -40,6 +59,11 @@ button {
     font-size: 1.2rem;
     padding: 5px 10px;
     margin: 0;
+}
+
+input:focus,
+button:focus {
+    outline: 0;
 }
 
 .search__btn {
@@ -58,4 +82,79 @@ button {
 }
 
 
+#result__heading {
+    text-align: center;
+    color: white;
+    padding: 1rem;
+}
 
+
+.meals {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+}
+
+.meal img {
+    height: 100%;
+    width: 100%;
+    border: solid 4px white;
+    border-radius: 3px;
+}
+
+#main_meal {
+    width: 400px;
+    height: auto;
+    border: solid 4px white;
+    border-radius: 3px;
+}
+
+.meal {
+    cursor: pointer;
+    position: relative;
+    width: 180px;
+    height: 180px;
+    text-align: center;
+}
+
+.meal-info {
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, .7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: opacity .2s ease-in;
+    opacity: 0;
+}
+
+.meal:hover .meal-info{
+    opacity: 1;
+}
+
+@media (max-width: 800px) {
+    .meals {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 790px) {
+    .meals {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 690px) {
+    input[type='text'] {
+        width: 100%;
+    }
+
+    .meals {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
